test/invalid/ClassBeforeAbstract/ClassBeforeAbstract.plume
/**
 * @author Robin Burgess 36815
 */
 class abstract ClassBeforeAbstract extends Object is
	method abstract returnOne : () -> Integer is
		1